--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
     font-size: 14px;
 }
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     color: rgb(29, 29, 31);
     letter-spacing: -0.05em;
     background: white;
@@ -20,9 +20,11 @@ a {
 
 .global-nav {
     height: 44px;
+    padding: 0 1rem;
 }
 .local-nav {
     height: 52px;
+    padding: 0 1rem;
     border-bottom: 1px solid #ddd;
 }
 .global-nav-links,
@@ -46,4 +48,33 @@ a {
 }
 .local-nav-links a:not(.product-name) {
     margin-left: 2em;
+}
+.scroll-section {
+    padding-top: 50vh;
+}
+#scroll-section-0 h1 {
+    font-size: 4rem;
+    text-align: center;
+}
+.main-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    font-size: 2.5rem;
+}
+.main-message p {
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.2;
+}
+.description {
+    font-size: 1.2rem;
+    color: #888;
+}
+.description strong {
+    float: left;
+    font-size: 3rem;
+    margin-right: 0.2em;
+    color: rgb(29, 29, 31)
 }
